--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@tailwindcss/forms": "^0.5.7",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
+    "format": "^0.2.2",
     "iron-session": "^8.0.1",
     "next": "14.2.3",
+    "prettier-plugin-tailwindcss": "^0.6.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
@@ -34,6 +36,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "prettier": "3.3.2",
     "prisma": "^5.15.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
