--- a/package.json
+++ b/package.json
@@ -18,16 +18,18 @@
     "bcrypt": "^5.1.1",
     "format": "^0.2.2",
     "iron-session": "^8.0.1",
+    "lodash": "^4.17.21",
     "next": "14.2.3",
     "prettier-plugin-tailwindcss": "^0.6.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.5",
+    "react-hook-form": "^7.52.0",
     "twilio": "^5.1.0",
     "validator": "^13.12.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
